# BarcodeOmatic

./: .gitignore  README.md  app.py  barcode_dialog.py  data_handler.py  main.py  make_icon.py  pyproject.toml  pyrightconfig.json  requirements.txt  sample_data.csv  upc_lookup.py
